--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "monolog/monolog": "^2.1",
         "php-di/php-di": "^6.2",
         "slim/psr7": "^1.1",
-        "slim/slim": "^4.5"
+        "slim/slim": "4.*"
     },
     "require-dev": {
         "jangregor/phpstan-prophecy": "^0.8.0",
