--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "app/"
         }
     },
     "autoload-dev": {
